[gd_scene load_steps=5 format=3 uid="uid://dtc1glgqwdv6l"]

[ext_resource type="PackedScene" uid="uid://bb58688jb2gt4" path="res://Scenes/player_ship.tscn" id="1_e2ab8"]
[ext_resource type="Script" path="res://Scripts/world.gd" id="1_m8hcd"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_blicj"]
a = Vector2(93, -22.75)
b = Vector2(-87, -22.75)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_p6dh1"]
a = Vector2(0, 320)
b = Vector2(0, 185)

[node name="World" type="Node2D"]
script = ExtResource("1_m8hcd")

[node name="BackgroundRect" type="ColorRect" parent="."]
offset_right = 180.0
offset_bottom = 320.0
color = Color(0.0313726, 0, 0.164706, 1)

[node name="PlayerShip" parent="." instance=ExtResource("1_e2ab8")]
position = Vector2(90, 280)

[node name="PlayerSpawnPosition" type="Marker2D" parent="."]
position = Vector2(90, 280)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(87, 341.75)
shape = SubResource("SegmentShape2D_blicj")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(87, 208)
shape = SubResource("SegmentShape2D_blicj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource("SegmentShape2D_p6dh1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(180, 0)
shape = SubResource("SegmentShape2D_p6dh1")

[connection signal="laser_shot" from="PlayerShip" to="." method="_on_player_ship_laser_shot"]
